[package]
name = "mitsuba_rs"
version = "0.1.0"
authors = ["beltegeuse <adrien.gruson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xml-rs = "0.8"
serde =  { version = "1.0", features = [ "derive" ] }
cgmath = "0.17"