[package]
name = "mitsuba_rs"
version = "0.1.0"
authors = ["beltegeuse <adrien.gruson@gmail.com>"]
edition = "2018"

[features]
default = ["serialized", "ply"]
ply = ["ply-rs"]
serialized = ["miniz_oxide", "byteorder", "bitflags"]

[dependencies]
xml-rs = "0.8"
cgmath = "0.18" # TODO: Think to remove this dependencies
lazy_static = "1.4"
quick-error = "2.0.0"
miniz_oxide = { version = "0.4", optional = true }
byteorder = {  version = "1.3", optional = true }
bitflags = {  version = "1.2", optional = true }
ply-rs = { version = "0.1.2", optional = true }

[dev-dependencies]
clap = { version = "*", features = [ "derive" ] }
env_logger = "0.7"
log = "0.4"
tobj = "*"